--- a/molenapplicatie.client/package.json
+++ b/molenapplicatie.client/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "jest-editor-support": "*",
-    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "run-script-os": "*",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
