--- a/molenapplicatie.client/package.json
+++ b/molenapplicatie.client/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@types/leaflet.markercluster": "^1.5.4",
     "jest-editor-support": "*",
     "leaflet.markercluster": "^1.5.3",
     "run-script-os": "*",
