--- a/molenapplicatie.client/angular.json
+++ b/molenapplicatie.client/angular.json
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "allowedCommonJsDependencies": [ "leaflet" ],
+            "allowedCommonJsDependencies": [ "leaflet", "leaflet.markercluster" ],
             "outputPath": "dist/molenapplicatie.client",
             "index": "src/index.html",
             "browser": "src/main.ts",
