--- a/molenapplicatie.client/angular.json
+++ b/molenapplicatie.client/angular.json
@@ -38,10 +38,8 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css",
-              "node_modules/leaflet.markercluster/dist/MarkerCluster.css",
-              "node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css"
+              "node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": []
           },
