--- a/molenapplicatie.client/package.json
+++ b/molenapplicatie.client/package.json
@@ -23,9 +23,8 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "@types/leaflet.markercluster": "^1.5.4",
     "jest-editor-support": "*",
-    "leaflet.markercluster": "^1.5.3",
+    "leaflet": "^1.9.4",
     "run-script-os": "*",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -33,10 +32,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.7",
-    "@angular/cli": "^18.2.7",
+    "@angular/cli": "^18.2.8",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.12",
+    "@types/leaflet.markercluster": "^1.5.4",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
