Created ApiToken for FileUpload and delete on molen

--- a/MolenApplicatie.Server/appsettings.Development.json
+++ b/MolenApplicatie.Server/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "FileUploadFilter": {
+    "ApiToken": "e5e6c507-f46c-459f-a40c-15aac76f9638"
   }
 }
