--- a/MolenApplicatie.Server/appsettings.Production.json
+++ b/MolenApplicatie.Server/appsettings.Production.json
@@ -12,5 +12,8 @@
         "Url": "http://*:5000"
       }
     }
+  },
+  "FileUploadFilter": {
+    "ApiToken": "e5e6c507-f46c-459f-a40c-15aac76f96381"
   }
 }
