--- a/MolenApplicatie.Server/appsettings.Production.json
+++ b/MolenApplicatie.Server/appsettings.Production.json
@@ -14,6 +14,6 @@
     }
   },
   "FileUploadFilter": {
-    "ApiToken": "e5e6c507-f46c-459f-a40c-15aac76f96381"
+    "Authorization": "e5e6c507-f46c-459f-a40c-15aac76f96381"
   }
 }
