--- a/MolenApplicatie.Server/appsettings.Development.json
+++ b/MolenApplicatie.Server/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "FileUploadFilter": {
-    "ApiToken": "e5e6c507-f46c-459f-a40c-15aac76f9638"
+    "Authorization": "e5e6c507-f46c-459f-a40c-15aac76f9638"
   }
 }
