--- a/molenapplicatie.client/angular.json
+++ b/molenapplicatie.client/angular.json
@@ -36,10 +36,11 @@
 						],
 						"tsConfig": "tsconfig.app.json",
 						"assets": [
-							{
-								"glob": "**/*",
-								"input": "public"
-							}
+              {
+                "glob": "**/*",
+                "input": "public",
+                "ignore": [ "MolenAddedImages/**/*", "MolenImages/**/*" ]
+              }
 						],
 						"styles": [
 							"src/styles.scss",
@@ -67,7 +68,7 @@
 						"development": {
 							"optimization": false,
 							"extractLicenses": false,
-							"sourceMap": true
+              "sourceMap": true
 						}
 					},
 					"defaultConfiguration": "production"
