--- a/.github/workflows/build_project.yml
+++ b/.github/workflows/build_project.yml
@@ -1,15 +1,15 @@
-name: Molens applicatie
+# name: Molens applicatie
 
-on:
-  push:
-    branches: [ "master" ]
+# on:
+#   push:
+#     branches: [ "master" ]
 
-jobs:
-  build:
-    runs-on: self-hosted
-    steps:
-    - uses: actions/checkout@v4
-    - name: pull and build project
-      run: |
-        cd /home/buurmans/CommandFiles
-        ./nightly_task.sh
+# jobs:
+#   build:
+#     runs-on: self-hosted
+#     steps:
+#     - uses: actions/checkout@v4
+#     - name: pull and build project
+#       run: |
+#         cd /home/buurmans/CommandFiles
+#         ./nightly_task.sh
