--- a/molenapplicatie.client/angular.json
+++ b/molenapplicatie.client/angular.json
@@ -38,8 +38,7 @@
 						"assets": [
               {
                 "glob": "**/*",
-                "input": "public",
-                "ignore": [ "MolenAddedImages/**/*", "MolenImages/**/*" ]
+                "input": "public"
               }
 						],
 						"styles": [
