--- a/MolenApplicatie.Server/MolenApplicatie.Server.csproj
+++ b/MolenApplicatie.Server/MolenApplicatie.Server.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
+	
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
@@ -7,6 +7,9 @@
 		<SpaRoot>..\molenapplicatie.client</SpaRoot>
 		<SpaProxyLaunchCommand>npm start</SpaProxyLaunchCommand>
 		<SpaProxyServerUrl>https://localhost:4200</SpaProxyServerUrl>
+		<runtime>
+			<System.Drawing.Common.EnableUnixSupport>true</System.Drawing.Common.EnableUnixSupport>
+		</runtime>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -18,6 +21,7 @@
 		<PackageReference Include="Reinforced.Typings" Version="1.6.3" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+		<PackageReference Include="System.Drawing.Common" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
