--- a/MolenApplicatie.Server/MolenApplicatie.Server.csproj
+++ b/MolenApplicatie.Server/MolenApplicatie.Server.csproj
@@ -15,6 +15,7 @@
 	<ItemGroup>
 		<PackageReference Include="HtmlAgilityPack" Version="1.11.67" />
 		<PackageReference Include="leaflet" Version="0.7.3" />
+		<PackageReference Include="MetadataExtractor" Version="2.8.1" />
 		<PackageReference Include="Microsoft.AspNetCore.SpaProxy">
 			<Version>8.*-*</Version>
 		</PackageReference>
