--- a/MolenApplicatie.Server/MolenApplicatie.Server.csproj
+++ b/MolenApplicatie.Server/MolenApplicatie.Server.csproj
@@ -20,9 +20,10 @@
 			<Version>8.*-*</Version>
 		</PackageReference>
 		<PackageReference Include="Reinforced.Typings" Version="1.6.3" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
+		<PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.4" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-		<PackageReference Include="System.Drawing.Common" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
