fixed bug with the api_key string

--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -42,7 +42,7 @@ jobs:
               }
             },
             "FileUploadFilter": {
-              "Authorization": $API_KEY
+              "Authorization": '$API_KEY'
             }
           }
           EOF"
