Update .gitignore and add new file paths
- Added `MigrationBackup/`, `FodyWeavers.xsd`, `MolenImages/`, and `MolenAddedImages/` to .gitignore.
- Introduced new path for `environment.development.ts` in `/molenapplicatie.client/src/environments/`.
- Added new directory for JSON responses at `/MolenApplicatie.Server/Json/Responses/`.

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 MolenImages/
 MolenAddedImages/
 /molenapplicatie.client/src/environments/environment.development.ts
+/MolenApplicatie.Server/Json/Responses/
