Refactor Program.cs and configuration files: Update database connection string retrieval and add connection strings section to appsettings

--- a/MolenApplicatie.Server/appsettings.Production.json
+++ b/MolenApplicatie.Server/appsettings.Production.json
@@ -15,5 +15,8 @@
   },
   "FileUploadFilter": {
     "Authorization": "e5e6c507-f46c-459f-a40c-15aac76f96381"
+  },
+  "ConnectionStrings": {
+    "MolenDatabase": "server=localhost;user=root;password=DitIsEchtEenLastigWW;database=molen_database;port=3306"
   }
 }
